// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fileInputField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3p uv_toi52u5v"
      >
        <div
          class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
        >
          <label
            class="uv_17td3g90 uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owe uv_m4c9owk uv_m4c9owm uv_m4c9owq uv_m4c9ow23 uv_m4c9ow3f"
          >
            Test
          </label>
          <div
            class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owe uv_m4c9owk uv_m4c9owm uv_m4c9owo uv_m4c9ow23 uv_m4c9ow3f"
          >
            <div
              class="uv_12cubgs0 uv_12cubgs2 uv_12cubgs4 uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u61"
              data-testid="drag-container"
            >
              <input
                class="uv_12cubgs8"
                id="_r_0_"
                name="Test"
                type="file"
              />
              <svg
                class="styles__1sbwqkz0 styles_disabled_false__1sbwqkz1 styles_prominence_default__1sbwqkz3 styles_sentiment_primary__1sbwqkz7 styles_size_xlarge__1sbwqkzh styles_undefined_compound_32__1sbwqkz1g"
                viewBox="0 0 20 20"
              >
                <path
                  d="M9.25 13.25a.75.75 0 0 0 1.5 0V4.636l2.955 3.129a.75.75 0 0 0 1.09-1.03l-4.25-4.5a.75.75 0 0 0-1.09 0l-4.25 4.5a.75.75 0 1 0 1.09 1.03L9.25 4.636z"
                />
                <path
                  d="M3.5 12.75a.75.75 0 0 0-1.5 0v2.5A2.75 2.75 0 0 0 4.75 18h10.5A2.75 2.75 0 0 0 18 15.25v-2.5a.75.75 0 0 0-1.5 0v2.5c0 .69-.56 1.25-1.25 1.25H4.75c-.69 0-1.25-.56-1.25-1.25z"
                />
              </svg>
              <div
                class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owe uv_m4c9owk uv_m4c9owm uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
                for="_r_0_"
                style="--uv_qabug40: left;"
              />
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`fileInputField > should render correctly as an overlay 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3p uv_toi52u5v"
      >
        <div
          data-testid="drag-container"
        >
          <input
            class="uv_12cubgs8"
            id="_r_8_"
            name="Test"
            type="file"
          />
          <div
            class="uv_12cubgsb"
          >
            overlay
            <div
              class="uv_12cubgsd uv_12cubgsc"
            />
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`fileInputField > should render correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3p uv_toi52u5v"
      >
        <div
          class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
        >
          <label
            class="uv_17td3g90 uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owe uv_m4c9owk uv_m4c9owm uv_m4c9owq uv_m4c9ow23 uv_m4c9ow3f"
          >
            Test
          </label>
          <div
            class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owe uv_m4c9owk uv_m4c9owm uv_m4c9owo uv_m4c9ow33"
          >
            <div
              class="uv_12cubgs0 uv_12cubgs1 uv_12cubgs2 uv_12cubgs4 uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u61"
              data-testid="drag-container"
            >
              <svg
                class="styles__1sbwqkz0 styles_disabled_true__1sbwqkz2 styles_prominence_default__1sbwqkz3 styles_sentiment_primary__1sbwqkz7 styles_size_xlarge__1sbwqkzh styles_undefined_compound_0__1sbwqkzk"
                viewBox="0 0 20 20"
              >
                <path
                  d="M9.25 13.25a.75.75 0 0 0 1.5 0V4.636l2.955 3.129a.75.75 0 0 0 1.09-1.03l-4.25-4.5a.75.75 0 0 0-1.09 0l-4.25 4.5a.75.75 0 1 0 1.09 1.03L9.25 4.636z"
                />
                <path
                  d="M3.5 12.75a.75.75 0 0 0-1.5 0v2.5A2.75 2.75 0 0 0 4.75 18h10.5A2.75 2.75 0 0 0 18 15.25v-2.5a.75.75 0 0 0-1.5 0v2.5c0 .69-.56 1.25-1.25 1.25H4.75c-.69 0-1.25-.56-1.25-1.25z"
                />
              </svg>
              <div
                class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owe uv_m4c9owk uv_m4c9owm uv_m4c9ow1b uv_m4c9ow33"
                for="_r_4_"
                style="--uv_qabug40: left;"
              />
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
